# dotfiles

./: .chezmoi.toml.tmpl  .chezmoidata.toml  .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  dot_bashrc  dot_bashrc.tmpl  dot_envrc  dot_file.tmpl  get-cwiq-seed.sh  mkdocs.yml  pyproject.toml  requirements-docs.txt
.chezmoitemplates/: noble.bashrc.tmpl  part.tmpl
blackbox/: .chezmoi.toml.tmpl  .chezmoidata.toml  .chezmoiexternal.toml.tmpl  .chezmoiignore.tmpl  CLAUDE.md  dot_editorconfig.tmpl  dot_envrc.tmpl  dot_file.tmpl  dot_gitignore.toml  dot_scratch.tmpl
docs/: README.md  index.md
dot_bashrc.avail/: 100-aliases.bashrc  100-rkx.bashrc  200-git.bashrc  200-rkpyenv.bashrc  300-db2profile.bashrc  300-pyenv.bashrc  400-nodejs.bashrc  500-aws.bashrc  500-calibre.bashrc  500-editor.bashrc  500-exercism.bashrc  500-haskell.bashrc  500-racket.bashrc  500-rktilix.bashrc  500-zotero.bashrc  700-cdpath.bashrc  800-basher.bashrc  800-vscode.bashrc  900-docker.bashrc  900-gam.bashrc  900-rkdirenv.bashrc  900-rkgit.bashrc  900-rknvm.bashrc  900-sdkman.bashrc  900-usepackage.bashrc  999-rkpowerline.bashrc  rkgit-user-doc.txt  rkpowerline-user-doc.txt  rktilix-user-doc.txt  rkx-user-doc.txt
dot_bashrc.d/: noop.bashrc  symlink_100-aliases.bashrc  symlink_100-rkx.bashrc  symlink_200-rkpyenv.bashrc  symlink_500-rktilix.bashrc  symlink_700-cdpath.bashrc  symlink_900-rkdirenv.bashrc  symlink_900-rkgit.bashrc  symlink_900-rknvm.bashrc  symlink_999-rkpowerline.bashrc
home/: .bashrc.tmpl  .chezmoi.toml.tmpl  .chezmoidata.toml  dot_bashrc.tmpl
scripts/: docs-build.sh  (+3 more)
(+166 files in other folders)
