[project]
name = "chezmoi-docs"
version = "0.1.0"
description = "Documentation for ChezMoi dotfiles"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.7",
    "mkdocs-git-revision-date-localized-plugin>=1.2.4",
    "Pillow>=10.0.0",
    "cairosvg>=2.7.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []